--- a/web-portal.yml
+++ b/web-portal.yml
@@ -10,7 +10,8 @@ eureka:
 
 logging:
   level:
-    org.springframework.security: DEBUG
+#    org.springframework.security: DEBUG
+    org.springframework: DEBUG
 
 turbine:
   appConfig: task-webservice
