--- a/api-gateway.yml
+++ b/api-gateway.yml
@@ -46,8 +46,8 @@ security:
       userAuthorizationUri: http://${authserver.hostname}:${authserver.port}/${authserver.contextPath}/oauth/authorize
       clientId: acme
       clientSecret: acmesecret
-      registered-redirect-uri: http://localhost:8765/login
-      pre-established-redirect-uri: http://localhost:8765/login
+      registered-redirect-uri: http://178.62.211.74:8765/login
+      pre-established-redirect-uri: http://178.62.211.74:8765/login
       use-current-uri: false
     resource:
       jwt:
